# Wwise_Agent

./: $null  .gitignore  README.md  launcher.py  pyproject.toml
Doc/: object_types.json  waapi_functions.json  waapi_reference.txt  wwise_knowledge_base.txt
WwiseAgentBridge/: WwiseAgentBridge.uplugin
lib/: __init__.py
shared/: common_utils.py  wwise_version.py
temp/: object_types_zh.json  waapi_functions_zh.json  waapi_reference_zh.txt  wwise_knowledge_base_zh.txt
tests/: 1.1.md  2.7.md  smoke_test_cases.md
wwise_agent/: __init__.py  api_server.py  main.py  qt_compat.py
wwise_agent/core/: agent_runner.py  main_window.py  session_manager.py
wwise_agent/skills/: __init__.py  _waapi_helpers.py  add_effect.py  assign_bus.py  create_event.py  create_object.py  delete_object.py  execute_waapi.py  get_bus_topology.py  get_effect_chain.py  get_event_actions.py  get_object_properties.py  get_project_hierarchy.py  get_rtpc_list.py  get_selected_objects.py  get_soundbank_info.py  move_object.py  preview_event.py  remove_effect.py  search_objects.py  set_property.py  set_rtpc_binding.py  verify_event_completeness.py  verify_structure.py
wwise_agent/ui/: ai_tab.py  chat_view.py  cursor_widgets.py  font_settings_dialog.py  header.py  i18n.py  input_area.py  style_template.qss  theme_engine.py
wwise_agent/utils/: ai_client.py  doc_rag.py  embedding.py  growth_tracker.py  memory_store.py  reflection.py  reward_engine.py  token_optimizer.py  training_data_exporter.py  updater.py  wwise_backend.py
wwise_mcp/: __init__.py  server.py
wwise_mcp/config/: __init__.py  (+1 more)
(+27 files in other folders)
